Fix horizontal scroll on mobile

--- a/src/scss/globals.css
+++ b/src/scss/globals.css
@@ -49,6 +49,7 @@ html,
 body {
   scroll-behavior: smooth !important;
   scroll-padding-top: 100px;
+  overflow: hidden;
 }
 
 body {
